# rl_robot_deployment

./: .gitignore  README.md
legged_base/legged_gazebo/config/: default.yaml
legged_base/legged_gazebo/launch/: ning_empty_world copy.launch  ti5_empty_world.launch
legged_base/legged_gazebo/worlds/: competition.world  star.world
legged_base/legged_hw/: CMakeLists.txt
legged_base/legged_hw/include/legged_hw/: LeggedHW.h  LeggedHWLoop.h
legged_base/legged_hw/src/: LeggedHW.cpp  LeggedHWLoop.cpp
legged_robot/ahrs_imu_ros1/: Readme.md
legged_robot/ahrs_imu_ros1/src/: CMakeLists.txt  imu.launch  serial_imu.cpp  serial_parse.cpp  serial_parse.h
legged_robot/can_control/: CMakeLists.txt
legged_robot/can_control/include/: TimeDebug.h  can_hw.h  math_ops.h
legged_robot/can_control/src/: can_hw.cpp
legged_robot/legged_ti5_description/: CMakeLists.txt
legged_robot/legged_ti5_description/launch/: display.launch  empty_world.launch
legged_robot/legged_ti5_description/urdf/: ti5.urdf
legged_robot/legged_ti5_hw/: CMakeLists.txt
legged_robot/legged_ti5_hw/config/: ti5.yaml
legged_robot/legged_ti5_hw/include/: ti5HW.h  utilities.h
legged_robot/legged_ti5_hw/launch/: imu.launch  legged_ti5_hw.launch
legged_robot/legged_ti5_hw/src/: legged_ti5_hw.cpp  ti5HW.cpp  utilities.cpp
rl_controller/rl_controllers/: CMakeLists.txt  rl_controllers_plugins.xml
rl_controller/rl_controllers/config/: controllers.yaml  joy.yaml  ti5_amp.yaml  ti5_kd.yaml  ti5_motor_offset.yaml
rl_controller/rl_controllers/config/old_amp/: tg1_amp jay.yaml  ti5_amp yusuiji.yaml  ti5_amp061522.yaml  ti5_amp_wjs.yaml
rl_controller/rl_controllers/include/: TutorialsConfig.h
rl_controller/rl_controllers/include/rl_controllers/: DelayTestController.h  RLControllerBase.h  RotationTools.h  StudentPolicyController.h  StudentStmController.h
rl_controller/rl_controllers/include/rl_controllers/ti5_stand/: AcController.cpp  AcController.h  RLControllerBase.cpp
rl_controller/rl_controllers/launch/: ac_start.launch  ac_start_column.launch  ac_start_real.launch  amp_start_real.launch  load_ac_controller.launch  load_stm_controller.launch  load_student_policy_controller.launch  record_data.launch  stm_start.launch  stm_start_real.launch  student_start.launch  student_start_real.launch
rl_controller/rl_controllers/policy/ti5/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/ kong/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/258 1021 am/: ti5_amp.yaml  ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/258 1021 nt/: ti5_amp.yaml  ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/258 1022 am/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/258 1022 nt/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/258 1022 pm/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/258 1023 am/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/258 1024 am/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/316 1021/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/316 1022 am/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/local 1020/: ti5_dh_policy.mnn
rl_controller/rl_controllers/policy/ti5/local 1021 am/: ti5_amp.yaml  ti5_dh_policy.mnn  ti5_dh_policy.onnx
rl_controller/rl_controllers/policy/ti5/local 1021 nt/: ti5_amp.yaml  ti5_dh_policy.mnn
rl_controller/rl_controllers/src/: StudentPolicyController.cpp  StudentStmController.cpp
rl_controller/rl_controllers/src/scripts/: export_ac.py  export_mpl.py  policy_1.pt
rqt_multiplot_config/: ti5_imu.xml  ti5_motor_pos.xml  ti5_motor_torque.xml  ti5_position.xml  ti5_torque.xml  ti5_velocity.xml
